@@ -150,8 +150,9 @@
         <IsPartOfProject Value="True"/>
       </Unit7>
       <Unit8>
-        <Filename Value="Digit_Taker_Folder.pas"/>
+        <Filename Value="DigIt_Taker_Folder.pas"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="Digit_Taker_Folder"/>
       </Unit8>
       <Unit9>
         <Filename Value="DigIt_Form_Templates.pas"/>
